--- a/sosmed/templates/sosmed/list.html
+++ b/sosmed/templates/sosmed/list.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block contents %}
-	<p>{{ page_title }}</p>
+	<h1>{{ page_title }}</h1>
 
 	<table class="table">
 	  <thead class="thead-light">
@@ -14,15 +14,23 @@
 	      <th scope="col">First</th>
 	      <th scope="col">Last</th>
 	      <th scope="col">Username</th>
+	      <th scope="col">Delete</th>
+	      <th scope="col">Update</th>
 	    </tr>
 	  </thead>
 	  <tbody>
 	  	{% for account in all_account  %}
 		    <tr>
-		      <th scope="row">1</th>
+		      <th scope="row">{{ forloop.counter1 }}</th>
 		      <td>{{ account.first_name }}</td>
 		      <td>{{ account.last_name }}</td>
 		      <td>{{ account.username }}</td>
+		      <td>
+		      	<a class="btn btn-danger" href="{% url 'sosmed:delete' account.id %}">Delete</a>
+		      </td>
+		      <td>
+		      	<a class="btn btn-warning" href="{% url 'sosmed:update' account.id %}">Update</a>
+		      </td>
 		    </tr>
 	  	{% endfor %}
 	  </tbody>
